@@ -208,7 +208,12 @@ void getuid::create_mount(mountchoices& mountdetails, sunfish& app)
 
 	bool found;
 	ibicon *icon = app.add_mounticon(hostalias, sf, mountdetails.tcp, mountdetails.nfs3 ? 3 : 2, found);
-	icon->mount(mountdetails.stringsave().c_str());
-	icon->opendir();
+	try {
+		icon->mount(mountdetails.stringsave().c_str());
+		icon->opendir();
+	} catch(...) {
+		app.remove_mounticon(icon);
+		throw;
+	}
 }
 
