@@ -60,6 +60,7 @@ public:
 	void handle_event(rtk::events::menu_selection& ev);
 	void handle_event(rtk::events::close_window& ev);
 	ibicon *add_mounticon(const std::string &name, const std::string &specialfield, bool usetcp, int nfsversion, bool& found);
+	void remove_mounticon(ibicon *icon);
 	void getmounts();
 	getuid ggetuid;
 	hostbrowser browserwin;
